@@ -238,6 +238,29 @@ store d into 'pig_hbase_2_2' using org.apache.hcatalog.pig.HCatStorer();\,
                         ],
                 }, # end g
                 {
+                        'name' => 'Pig_HCat_Barrier',
+                        'tests' => [
+                                {
+                                 'num' => 1
+                                ,'hcat_prep'=>q\drop table if exists pig_hcat_barrier_1;
+create table pig_hcat_barrier_1 (name string, age int, gpa double) partitioned by (b string) CLUSTERED BY (name) INTO 1 BUCKETS STORED AS TEXTFILE;\
+                                ,'pig' => q\
+a = load ':INPATH:/studenttab10k' as (name:chararray, age:int, gpa:double);
+store a into 'pig_hcat_barrier_1' using org.apache.hcatalog.pig.HCatStorer('b=1'); \,
+                                ,'expected_err_regex' => 'not supported'
+                                },
+                                {
+                                 'num' => 2
+                                ,'hcat_prep'=>q\drop table if exists pig_hcat_barrier_2;
+create table pig_hcat_barrier_2 (name string, age int, gpa double) partitioned by (b string) CLUSTERED BY (name) SORTED BY (name) INTO 1 BUCKETS STORED AS TEXTFILE;\
+                                ,'pig' => q\
+a = load ':INPATH:/studenttab10k' as (name:chararray, age:int, gpa:double);
+store a into 'pig_hcat_barrier_2' using org.apache.hcatalog.pig.HCatStorer('b=1'); \,
+                                ,'expected_err_regex' => 'not supported'
+                                },
+                        ],
+                }, # end g
+                {
                         'name' => 'Pig_HCAT_COOP',
                         'tests' => [
                                 {
@@ -281,5 +304,6 @@ store a into ':OUTPATH:';\,
                         ],
                 }, # end g
 
+>>>>>>> .r1296703
          ]
 }
